Fix select option on ios (#40)

--- a/src/app/place/booking/keep/item/misconduct-viewer.component.scss
+++ b/src/app/place/booking/keep/item/misconduct-viewer.component.scss
@@ -15,6 +15,7 @@
 
 .pictures {
     height: initial;
+    padding: .75rem;
 }
 
 .misconduct {
